# PIAIC_PRACTICE

./: .gitignore
Quarter 01/: app.ts  class.ts  file1.ts  file2.ts  package-lock.json  package.json  riz.txt  tsconfig.json
Quarter 02/aeoskp_nextjs/: package-lock.json  package.json
Quarter 02/hello_nextjs_rizi/: package-lock.json  package.json
Quarter 02/json-server/: db.json
Quarter 02/modern_python/: app.ipynb  app.py  mea.txt  punjab_mea_imei.json
Quarter 02/practice/: package-lock.json  package.json  pnpm-lock.yaml
Quarter 02/practice-nextjs/: package-lock.json  package.json
Quarter 02/practice_nextjs/: package-lock.json  package.json
Quarter 02/project_nextjs/: package-lock.json  package.json  tsconfig.json
Quarter 03/ChatGPT-Project/: compose.yaml
Quarter 03/Q3 Python Practice/class01/: pyproject.toml
Quarter 03/Q3 Python Practice/class01/class01/: main.py
Quarter 03/todo-fastAPI/: compose.yml
Quarter 03/todo-fastAPI/fastapi-microservices/: Dockerfile.dev  pyproject.toml
Quarter 03/todo-fastAPI/fastapi-microservices/app/: main.py  settings.py
Quarter 04/n8n project/: RiziTech__AEO_Assistant.json  RiziTech__Email_Sender.json
Quarter 05/Q5_Hackathon-01_Customer_Support_Agent/: .env  requirements.txt
Quarter 05/Q5_Hackathone_01_Ecommerce_Customer_Support_Agent_Langgraph_Server/: .env  customer_support_agent.py  langgraph.json  test_agent.py
Quarter 05/Q5_Hackathone_01_Ecommerce_Customer_Support_Poetry_Project/: .env  pyproject.toml
Quarter 05/Q5_Hackathone_01_Ecommerce_Customer_Support_Poetry_Project/chatbot/: agent.py  main.py
Quarter 05/studio/: .env  langgraph.json  test_agent.py
(+66 files in other folders)
